// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrival query should return valid id field 1`] = `
Object {
  "data": Object {
    "allBookings": Array [
      Object {
        "arrival": Object {
          "airport": Object {
            "code": "CDG",
            "name": "Paris",
          },
        },
      },
      Object {
        "arrival": Object {
          "airport": Object {
            "code": "DXB",
            "name": "Dubai",
          },
        },
      },
      Object {
        "arrival": Object {
          "airport": Object {
            "code": "KUF",
            "name": "Samara",
          },
        },
      },
    ],
  },
}
`;

exports[`departure query should return valid id field 1`] = `
Object {
  "data": Object {
    "allBookings": Array [
      Object {
        "departure": Object {
          "airport": Object {
            "code": "LGW",
            "name": "London",
          },
        },
      },
      Object {
        "departure": Object {
          "airport": Object {
            "code": "STN",
            "name": "London",
          },
        },
      },
      Object {
        "departure": Object {
          "airport": Object {
            "code": "PRG",
            "name": "Prague",
          },
        },
      },
    ],
  },
}
`;

exports[`flights query should return valid id field 1`] = `
Object {
  "data": Object {
    "allBookings": Array [
      Object {
        "flights": Array [
          Object {
            "arrival": Object {
              "airport": Object {
                "code": "CDG",
                "name": "Paris",
              },
            },
            "departure": Object {
              "airport": Object {
                "code": "LGW",
                "name": "London",
              },
            },
          },
        ],
      },
      Object {
        "flights": Array [
          Object {
            "arrival": Object {
              "airport": Object {
                "code": "PRG",
                "name": "Prague",
              },
            },
            "departure": Object {
              "airport": Object {
                "code": "STN",
                "name": "London",
              },
            },
          },
          Object {
            "arrival": Object {
              "airport": Object {
                "code": "KBP",
                "name": "Kiev",
              },
            },
            "departure": Object {
              "airport": Object {
                "code": "PRG",
                "name": "Prague",
              },
            },
          },
          Object {
            "arrival": Object {
              "airport": Object {
                "code": "DXB",
                "name": "Dubai",
              },
            },
            "departure": Object {
              "airport": Object {
                "code": "KBP",
                "name": "Kiev",
              },
            },
          },
        ],
      },
      Object {
        "flights": Array [
          Object {
            "arrival": Object {
              "airport": Object {
                "code": "KUF",
                "name": "Samara",
              },
            },
            "departure": Object {
              "airport": Object {
                "code": "PRG",
                "name": "Prague",
              },
            },
          },
        ],
      },
    ],
  },
}
`;
